k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: marshians
  name: ingress
spec:
  ingressClassName: public
  rules:
  - host: logo.marsh.gg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: logo
            port: 
              number: 80
  tls:
  - hosts:
    - logo.marsh.gg
    secretName: logo-marsh-gg-tls
